fix: reduce shift of filter buttons on keyboard focus
On keyboard focus, inline padding is used to avoid the focus outline
being cut off on the filter buttons. But it was only doing it on the
first element, which resulting in things shifting back in a jarring
way when tabbing to the second element. This keeps the padding whenever
any are focus-visible, not just the first.

Also reduces inline start padding to only what is needed to account for
the focus outline size and the focus outline offset.

--- a/blocks/filter-group/filter-group.css
+++ b/blocks/filter-group/filter-group.css
@@ -29,9 +29,10 @@ effect on filter buttons to indicate horizontal scroll */
   display: none;
 }
 
-/* Adds left padding on focus to avoid outline cutoff*/
-.filter-group__list:has(.filter-group__button:first-child:focus-visible) {
-  padding-inline-start: 0.5rem;
+/* Adds left padding on focus to avoid outline cutoff on the first element. */
+.filter-group__list:has(.filter-group__button:focus-visible) {
+  /* Max focus outline size plus its outline offset. */
+  padding-inline-start: 4px;
 }
 
 .filter-group__label {
